tests/specs/publish/raw_imports/publish.out
Check [WILDCARD]main.ts
Checking for slow types in the public API...
error[unstable-raw-import]: raw imports have not been stabilized
 --> [WILDLINE]main.ts:1:18
  | 
1 | import data from "./data.txt" with { type: "text" };
  |                  ^^^^^^^^^^^^ the specifier
  | 
  = hint: for the time being, embed the data directly into a JavaScript file (ex. as encoded base64 text)

  docs: https://github.com/denoland/deno/issues/29904

error: Found 1 problem
